tests/unit-fail/j062a.c
struct _s {
      int x;
      int a[];
} s;

int main(void) {
      s.a[0];
      return 0;
}
